--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- Nav -->
     <div class="container">
         <nav>
             <ul>
@@ -18,6 +19,26 @@
                 <li><a href="#">Blog</a></li>
             </ul>
         </nav>
+
+        <!-- Header -->
+         <div class="frame-container">
+            <div class="gradient">
+                <header>
+                    <section class="social">
+                        <div class="line"></div>
+                        <i class="fa-brands fa-bluesky"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <div class="line"></div>
+
+                        <h1>
+                            John <br/>
+                            Pageler
+                        </h1>
+                    </section>
+                </header>
+            </div>
+         </div>
     </div>
 </body>
 </html>
