--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
 
         <!-- Header -->
-         <div class="frame-container">
+        <div class="frame-container">
             <div class="gradient">
                 <header>
                     <section class="social">
@@ -38,7 +38,20 @@
                     </section>
                 </header>
             </div>
-         </div>
+        </div>
+
+        <!-- About -->
+        <section class="about">
+            <p>
+                Lorem, <span>ipsum dolor</span> sit amet consectetur adipisicing elit. Modi iste quibusdam sit culpa voluptatibus, dicta ex exercitationem dignissimos nam, ipsam ut aut deleniti. Sit ratione, tempora quae molestias quidem vero.
+            </p>
+            <p class="two">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, nesciunt quo incidunt fuga maiores repellendus? Ex nobis enim itaque veritatis, ipsum labore ea, repellendus consequatur mollitia distinctio impedit quo laboriosam.
+            </p>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, eum cumque sed, quam non neque laborum vitae itaque omnis commodi doloribus saepe atque repellat odio earum. Obcaecati voluptas vitae eligendi?
+            </p>
+        </section>
     </div>
 </body>
 </html>
