--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, eum cumque sed, quam non neque laborum vitae itaque omnis commodi doloribus saepe atque repellat odio earum. Obcaecati voluptas vitae eligendi?
             </p>
         </section>
+
+        <!-- Projects -->
+        <section class="projects">
+            <h1 class="title">
+                RECENT <br/>
+                PRO<span>JECTS</span>
+            </h1>
+
+            <section class="images-container">
+                <div class="images">
+                    <img src="https://github.com/HuXn-WebDev/Sass-Masterclass/blob/main/Finished/10.%20Portfolio%20Site/Images/Projects/1.png?raw=true" class="img-one" />
+                    <img src="https://github.com/HuXn-WebDev/Sass-Masterclass/blob/main/Finished/10.%20Portfolio%20Site/Images/Projects/2.png?raw=true" class="img-two" />
+                    <img src="https://github.com/HuXn-WebDev/Sass-Masterclass/blob/main/Finished/10.%20Portfolio%20Site/Images/Projects/3.png?raw=true" class="img-three" />
+                    <img src="https://github.com/HuXn-WebDev/Sass-Masterclass/blob/main/Finished/10.%20Portfolio%20Site/Images/Projects/4.png?raw=true" class="img-four" />
+                </div>
+                <div class="images">
+                    <img src="https://github.com/HuXn-WebDev/Sass-Masterclass/blob/main/Finished/10.%20Portfolio%20Site/Images/Projects/5.png?raw=true" class="img-one" />
+                    <img src="https://github.com/HuXn-WebDev/Sass-Masterclass/blob/main/Finished/10.%20Portfolio%20Site/Images/Projects/6.png?raw=true" class="img-two" />
+                    <img src="https://github.com/HuXn-WebDev/Sass-Masterclass/blob/main/Finished/10.%20Portfolio%20Site/Images/Projects/7.png?raw=true" class="img-three" />
+                    <img src="https://github.com/HuXn-WebDev/Sass-Masterclass/blob/main/Finished/10.%20Portfolio%20Site/Images/Projects/8.png?raw=true" class="img-four" />
+                </div>
+            </section>
+        </section>
     </div>
 </body>
 </html>
