--- a/index.html
+++ b/index.html
@@ -75,6 +75,67 @@
                 </div>
             </section>
         </section>
+
+        <!-- Reviews -->
+        <section class="clients">
+            <h1 class="title">
+                <span>CL</span>IENTS <br/>
+                REVIEWS
+            </h1>
+
+            <section class="cards-container">
+                <div class="cards">
+                    <div class="card">
+                        <p class="card-info">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, quisquam placeat eius, minus ullam dolores sed labore tempora dolorem.
+                        </p>
+                        <br/>
+
+                        <div class="user-info">
+                            <div class="user-img user-img-one"></div>
+                            <div class="info">
+                                <h4 class="user-name">Sally Doe</h4>
+                                <p class="user-handle">@sd</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards">
+                    <div class="card">
+                        <p class="card-info">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, quisquam placeat eius, minus ullam dolores sed labore tempora dolorem.
+                        </p>
+                        <br/>
+
+                        <div class="user-info">
+                            <div class="user-img user-img-two"></div>
+                            <div class="info">
+                                <h4 class="user-name">Jane Doe</h4>
+                                <p class="user-handle">@jd</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards">
+                    <div class="card">
+                        <p class="card-info">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, quisquam placeat eius, minus ullam dolores sed labore tempora dolorem.
+                        </p>
+                        <br/>
+
+                        <div class="user-info">
+                            <div class="user-img user-img-three"></div>
+                            <div class="info">
+                                <h4 class="user-name">April Doe</h4>
+                                <p class="user-handle">@ad</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
     </div>
 </body>
 </html>
