--- a/index.html
+++ b/index.html
@@ -136,6 +136,37 @@
                 </div>
             </section>
         </section>
+
+        <!-- Footer -->
+        <footer>
+            <div class="logo-container">
+                <h1>Portfolio</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis minus culpa, delectus quis nihil corporis facilis nisi error minima laborum impedit voluptatem sint officiis doloribus molestias debitis tempora hic. Libero.
+                </p>
+            </div>
+
+            <div class="about-company">
+                <div class="footer-container">
+                    <h1>About</h1>
+                    <p>News & Blogs</p>
+                    <p>Features</p>
+                    <p>About Us</p>
+                </div>
+                <div class="footer-container">
+                    <h1>Company</h1>
+                    <p>How We Work</p>
+                    <p>Capital</p>
+                    <p>Secutiry</p>
+                </div>
+                <div class="footer-container">
+                    <h1>Support</h1>
+                    <p>FAQ</p>
+                    <p>Contact Us</p>
+                    <p>Secutiry</p>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
